fixed footer spacing

--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ float:right;
 }
 #main-content .Photo-area{
 width:100%;
-padding:50px 0 0 0;
+padding:50px 0 0 85px;
 display:flex;
 justify-content: space-evenly;
 }
@@ -186,7 +186,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
   float: left;
   width:280px;
   height:294px;
-  padding:0 0 0 0;
+  padding:0 0 20px 0;
   backface-visibility: hidden;
 }
 
@@ -218,7 +218,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
     float: left;
     width:280px;
     height:294px;
-    padding:0 0 0 0;
+    padding:0 0 20px 0;
     backface-visibility: hidden;
   }
   #main-content .section-1 .photo-2:hover {
@@ -229,7 +229,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
     float: left;
     width:280px;
     height:294px;
-    padding:0 0 0 0;
+    padding:0 0 20px 0;
     backface-visibility: hidden;
   }
   #main-content .section-1 .photo-3:hover {
@@ -244,7 +244,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
     float: left;
     width:280px;
     height:294px;
-    padding:0 0 0 0;
+    padding:0 0 20px 0;
   }
   #main-content .section-2 .photo-4:hover {
     opacity: 0.8;
@@ -254,7 +254,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
     float: left;
     width:280px;
     height:294px;
-    padding:0 0 0 0;
+    padding:0 0 20px 0;
   }
 
   #main-content .section-2 .photo-5:hover {
@@ -265,7 +265,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
     float: left;
     width:280px;
     height:294px;
-    padding:0 0 0 0;
+    padding:0 0 20px 0;
   }
 
   #main-content .section-2 .photo-6:hover {
@@ -280,7 +280,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
     float: left;
     width:280px;
     height:294px;
-    padding:0 0 0 0;
+    padding:0 0 20px 0;
   }
 
   #main-content .section-3 .photo-7:hover {
@@ -291,7 +291,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
     float: left;
     width:280px;
     height:294px;
-    padding:0 0 0 0;
+    padding:0 0 20px 0;
   }
 
   #main-content .section-3 .photo-8:hover {
@@ -302,7 +302,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
     float: left;
     width:280px;
     height:294px;
-    padding:0 0 0 0;
+    padding:0 0 20px 0;
   }
 
   #main-content .section-3 .photo-9:hover {
@@ -323,13 +323,22 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
   justify-content: space-between;
   font-size:14px;
   }
-  #Footer  ul{
+  /* #Footer  ul{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+  } */
+  #footer .first{
+    display:block;
   }
+
+  #footer .second{
+    display:block;
+  }
+
   #Footer li{
     padding-left:12px;
+    padding-bottom: 10px;;
   }
   #Footer a{
     color:rgba(var(--fe0,0,55,107),1);
@@ -338,7 +347,7 @@ box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
     margin-right:-20px;
   }
 
-  @media screen and (max-width: 375px){
+  @media screen and (min-width:350px) {
 
     #header .search-area {
       display: inline-block;
